# C-My-HTTP

./: CMakeLists.txt  TODO.md  main.cpp
examples/simple/: CMakeLists.txt  main.cpp
include/: http.hpp  net.hpp  reqReader.hpp  request.hpp  response.hpp  server.hpp  template.hpp
src/: CMakeLists.txt  http.cpp  reqReader.cpp  response.cpp  server.cpp
tests/: CMakeLists.txt  tests.cpp
